--- a/inst/test/test.Rmd
+++ b/inst/test/test.Rmd
@@ -4,56 +4,72 @@ author: "Phung Khanh Lam"
 date: "2/2/2017"
 output: html_document
 ---
-:proj_tags: work|statistics
-:proj_close: 2017-03-02
+```{todo project}
+proj_tags = work|statistics
+proj_start = 
+proj_end = 2017-02-10 00:00
+```  
 
 ## Lorem ipsum dolor sit amet
-:TODO:  task 1
-  :info:  to do task 1
-  :tags:  misc|test
-  :personnel:  LamPK
-  :cost:  0 VND
-  :deadline:  2017-03-02 12:30
-  :priority:  high
-  :start:
-  :end:  
-  
+```{todo task 1}
+info = to do task 1
+tags = misc|test
+personnel = xxx
+cost = 0 USD
+deadline = 2017-03-02 12:30
+priority = high
+start = 
+end = 
+```  
+
 ## Lorem
 ### Lorem ipsum
 Lorem ipsum dolor sit amet
 
-:TODO:  task 2
-  :info:  to do task 2
-  :tags:  test
-  :deadline:  2017-02-03 08:00
-  :priority:  medium
-  :start:  2017-02-02 10:00
-  :end:  
+```{todo task 2}
+info = to do task 2
+tags = test
+personnel = 
+cost = 
+deadline = 2017-02-04 08:00
+priority = medium
+start = 2017-02-02 10:00
+end = 
+```  
 
 ## Lorem ipsum
 Lorem ipsum dolor
 
-:TODO:  task 3
-  :info:  to do task 3
-  :tags:  test
-  :deadline:  2017-02-02 08:00
-  :priority:  low
-  :start:  2017-02-01 10:00
-  :end:  
-  
+```{todo task 3}
+info = to do task 3
+tags = test
+personnel = 
+cost = 
+deadline = 2017-02-02 08:00
+priority = low
+start = 2017-02-01 10:00
+end = 
+```  
+
 ## Lorem ipsum
 Lorem ipsum dolor
 
-:TODO:  task 4
-  :info:  to do task 4
-  :tags:  test
-  :deadline:  2017-02-03 08:00
-  :priority:  high
-  :start:  2017-02-01 10:00
-  :end:  2017-02-02 10:00
-  
-  
-```{r}
+```{todo task 4}
+info = to do task 4
+tags = test
+personnel = 
+cost = 
+deadline = 2017-02-04 08:00
+priority = high
+start = 2017-02-01 00:00
+end = 2017-02-02 00:00
+```  
+
+```{r test, options}
+context <- rstudioapi::getActiveDocumentContext()
+    path <- context$path
+    task <- get_task(path)
 manage_task_addin()
+plot_task_addin()
 ```
 
