--- a/inst/test/test.Rmd
+++ b/inst/test/test.Rmd
@@ -5,7 +5,7 @@ date: "2/2/2017"
 output: html_document
 ---
 ```{todo project}
-proj_tags = work|statistics
+proj_tags = test
 proj_start = 
 proj_end = 2017-02-10 00:00
 ```  
@@ -13,7 +13,7 @@ proj_end = 2017-02-10 00:00
 ## Lorem ipsum dolor sit amet
 ```{todo task 1}
 info = to do task 1
-tags = misc|test
+tags = test
 personnel = xxx
 cost = 0 USD
 deadline = 2017-03-02 12:30
@@ -65,11 +65,4 @@ start = 2017-02-01 00:00
 end = 2017-02-02 00:00
 ```  
 
-```{r test, options}
-context <- rstudioapi::getActiveDocumentContext()
-    path <- context$path
-    task <- get_task(path)
-manage_task_addin()
-plot_task_addin()
-```
 
